[package]
name = "uniswapv3-pool-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.23", features = ["provider-ws", "contract"] }
alloy-sol-types = "1.0.23"
alloy-provider = "1.0.23"
alloy-contract = "1.0.23"
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
alloy-primitives = "1.3.0"
alloy-transport-http = "1.0.23"
alloy-rpc-client = "1.0.23"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rug = "1.24.0"
num-rational = "0.4"

uniswap-v3-sdk = { version = "5.0.0", features = ["extensions", "std"] }
uniswap-sdk-core = "5.0.0"
thiserror = { version = "2", default-features = false }

regex = "1"
once_cell = "1"
fastnum = "0.2"
dotenvy = "0.15.7"
